@@ -14,6 +14,7 @@ The following submitted code, packages or analysis, and deserve special thanks:
   Ankur Sinha
   Benjamin Weber
   Jochen Sprickerhof
+  Peter Novak
 
 Thanks to the following, who submitted detailed bug reports and excellent
 suggestions:
